--- a/Source/IL2TelemetryProvider.csproj
+++ b/Source/IL2TelemetryProvider.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\SimFeedback-AC-Servo\Src\SimFeedbackTelemetryProvider\SimFeedbackTelemetryProvider.csproj">
+    <ProjectReference Include="..\..\..\SimFeedback\SimFeedback-AC-Servo\Src\SimFeedbackTelemetryProvider\SimFeedbackTelemetryProvider.csproj">
       <Project>{a43fc598-5e10-4730-83f8-ca0f6164c988}</Project>
       <Name>SimFeedbackTelemetryProvider</Name>
     </ProjectReference>
